# ResearchArena

./: pyproject.toml  viewer.py
configs/: default.yaml  rtx3090.yaml
researcharena/: cli.py  pipeline.py
researcharena/tracking/: __init__.py  client.py  ingest.py  store.py
researcharena/utils/: agent_runner.py  tracker.py
